<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent" xmlns:tools="http://schemas.android.com/tools" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

			<RelativeLayout
                android:id="@+id/aba1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

	                <Button
	                    android:id="@+id/cancelar1"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_alignParentBottom="true"
	                    android:layout_alignParentRight="true"
	                    android:layout_alignParentEnd="true"
	                    android:text="@string/bt_cancelar" />

	                <Button
	                    android:id="@+id/tocar1"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_alignParentBottom="true"
	                    android:layout_toLeftOf="@+id/cancelar1"
	                    android:layout_toStartOf="@+id/cancelar1"
	                    android:text="@string/bt_tocar" />

	                <TextView
	                    android:id="@+id/textViewManipulaSom"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_alignParentLeft="true"
	                    android:layout_alignParentStart="true"
	                    android:layout_alignParentTop="true"
	                    android:text="@string/tv_manipulacao" />

	                <SeekBar
	                    android:id="@+id/seekBarExemplo"
	                    android:layout_width="match_parent"
	                    android:layout_height="wrap_content"
	                    android:layout_alignParentLeft="true"
	                    android:layout_alignParentStart="true"
	                    android:layout_below="@+id/TextViewControleVolume" />

	                <TextView
	                    android:id="@+id/TextViewControleVolume"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_centerHorizontal="true"
	                    android:layout_marginTop="16dp"
	                    android:text="@string/tv_controleVolume" />

			</RelativeLayout>
            <RelativeLayout
                android:id="@+id/aba2"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >
                
		            <TextView
				        android:id="@+id/textViewEditaCS"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignParentLeft="true"
				        android:layout_alignParentStart="true"
				        android:layout_alignParentTop="true"
				        android:text="@string/tv_edicao" />
				
				    <EditText
				        android:id="@+id/editTextCS"
				        android:layout_width="wrap_content"
				        android:layout_height="wrap_content"
				        android:layout_alignParentLeft="true"
				        android:layout_alignParentStart="true"
				        android:layout_alignParentRight="true"
				        android:layout_alignParentEnd="true"
				        android:ems="10"
				        android:layout_below="@+id/textViewEditaCS"
				        android:inputType="textMultiLine" >
		                  	<requestFocus />
					</EditText>                
						
   	                <Button
   	                    android:id="@+id/tocar2"
   	                    android:layout_width="wrap_content"
   	                    android:layout_height="wrap_content"
   	                    android:layout_alignParentBottom="true"
   	                    android:layout_alignParentLeft="true"
   	                    android:layout_alignParentStart="true"
   	                    android:layout_toLeftOf="@+id/salvar2"
   	                    android:layout_toStartOf="@+id/salvar2"
   	                    android:text="@string/bt_tocar" />

	                <Button
	                    android:id="@+id/cancelar2"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_alignParentBottom="true"
	                    android:layout_alignParentRight="true"
	                    android:layout_alignParentEnd="true"
	                    android:layout_toRightOf="@+id/salvar2"
	                    android:layout_toEndOf="@+id/salvar2"
	                    android:text="@string/bt_cancelar" />

	                <Button
	                    android:id="@+id/salvar2"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_alignParentBottom="true"
	                    android:layout_centerHorizontal="true"
	                    android:text="@string/botao_salvar" />
            </RelativeLayout>
            
        </FrameLayout>
    </LinearLayout>

</TabHost>